--- a/saglikpersonelitakip/web/personeller.xhtml
+++ b/saglikpersonelitakip/web/personeller.xhtml
@@ -35,6 +35,15 @@
         </nav>
         <div class="row">
             <div class="col-md-8">
+                <h:form>
+                    <center>
+                        #{personellerController.pageCount} Sayfadan #{personellerController.page} Gösteriliyor.&nbsp;
+                        <div class="btn-group">
+                            <h:commandButton action="#{personellerController.geri()}" value="geri" class="btn btn-sm btn-outline-dark"/>
+                            <h:commandButton action="#{personellerController.ileri()}" value="ileri" class="btn btn-sm btn-outline-dark"/>
+                        </div>
+                    </center>
+                </h:form>
                 <h:dataTable class="table table-striped ml-5 mt-3" value="#{personellerController.pplist}" var="pplist">
                     <h:column>
                         <f:facet name="header">ID</f:facet>
@@ -79,7 +88,7 @@
             </div>
             <div class="col-md-3 ml-5">
                 <h3 style="color: green; text-align: center; " class="mt-3 mb">Yeni Kayıt Ekle</h3>
-                <h:form>
+                <h:form enctype="multipart/form-data">
                     <div class="row my-3">
                         <label for="persone_adsoyad">Ad Soyad:</label>
                         <h:inputText value="#{personellerController.personel.persone_adsoyad}" class="form-control" id="persone_adsoyad" />
@@ -95,7 +104,12 @@
                     <div class="row my-3">
                         <label for="persone_telefon">Telefon:</label>
                         <h:inputText value="#{personellerController.personel.personel_telefon}" class="form-control" id="persone_telefon" />
-                    </div>  
+                    </div>
+                    <div class="row my-3">
+                        <label for="persone_telefon">Belge:</label>
+                        <h:inputFile value="#{personellerController.doc}" styleClass="custom-file"/>
+
+                    </div>
                     <h:commandButton rendered="#{personellerController.personel.personel_id==0}" action="#{personellerController.create}" class="btn btn-success" value="Ekle"/>
                     <div class="btn-group">
                         <h:commandButton rendered="#{personellerController.personel.personel_id!=0}" action="#{personellerController.reset}" class="btn btn-info" value="Formu Sıfırla"/>
